# advent_of_code_2025

day_1/: CMakeLists.txt
day_1/src/: day_one_1.c
